# test_rig

./: .gitignore  2025-06-10_16-44-39_gas_analysis.csv  2025-06-11_09-49-46_gas_analysis.csv  BGA_test.py  CVM24P_test.py  CVM_test.py  TC-08_test.py  acromag.py  acromag_log.csv  architecture.md  bga244_test_enhanced.py  cdaq_test.py  check_data_values.py  macBGA.py  main.py  manual.py  modbus_rtu.py  requirements.txt  sandi_modbus_test.py  sanditest.py  tasks.md  test2.py  test_cvm_hardware.py  test_cvm_interface.py  test_ni_cdaq_hardware.py  test_post_processor.py  test_pressure_plot_controls.py  test_task10.py  test_task11.py  test_task12.py  test_task13.py  test_task14.py  test_task15.py  test_task16.py  test_task17.py  test_task18.py  test_task19.py  test_task3.py  test_task4.py
CVM24P/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  README.txt  cvm24p_example.py  cvm64h_example.py  pyproject.toml  pyrightconfig.json  receive_evm_data_example.py  requirements.txt  test.py  version_increment.py  xc2_dio_example.py  xc2_firmware.py  xc2_firmware_TCP.py  xc2_load_fpga.py  xc2_mis_sandbox.py  xc2_sandbox.py  xc2_xam_example.py  xct_sandbox.py
CVM24P/docs/: xc2_library_docs.rst
CVM24P/xc2/: bus.py  bus_utils.py  bus_virtual.py  comm_logger.py  consts.py  packets.py  protocol.py  utils.py  xc2_dev_aio.py  xc2_dev_cvm24p.py  xc2_dev_cvm32a.py  xc2_dev_cvm64h.py  xc2_dev_dctrl.py  xc2_dev_dio.py  xc2_dev_evm8.py  xc2_dev_evm8_core.py  xc2_dev_hvload.py  xc2_dev_mis.py  xc2_dev_pmm.py  xc2_dev_rel.py  xc2_dev_virtual.py  xc2_dev_xam.py  xc2_device.py  xc2_except.py  (+2 more)
(+984 files in other folders)
